--- a/BookShop/shop/templates/partial/header.html
+++ b/BookShop/shop/templates/partial/header.html
@@ -1,6 +1,6 @@
 <header style="background-color: #1D96C9">
     <div class="container">
-        <div class="d-flex justify-content-between mb-2 collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="header-top">
             <div class="d-flex fs-5">
                 <button class="btn header-text">
                     <span>Россия, Москва</span>
