--- a/BookShop/shop/templates/partial/header.html
+++ b/BookShop/shop/templates/partial/header.html
@@ -33,7 +33,7 @@
                     <div class="w-100">
                         <form class="d-flex ms-2 w-100">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-info text-white" type="submit">Search</button>
+                            <button class="btn btn-info text-white" type="submit">Поиск</button>
                         </form>
                     </div>
                 </div>
