--- a/BookShop/shop/templates/partial/header.html
+++ b/BookShop/shop/templates/partial/header.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="d-flex align-items-center ms-3">
-                    <button class="btn text-white">Аккаунт</button>
+                    <a class="btn text-white" href="{% if user.is_authenticated %}#{% else %}{% url 'login'%}{% endif %}">Аккаунт</a>
                     <a class="btn text-white" href="#">Корзина</a>
                     
                 </div>
