--- a/BookShop/shop/templates/partial/header.html
+++ b/BookShop/shop/templates/partial/header.html
@@ -25,7 +25,9 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <span class="me-5 fs-1">Logo</span>
+                <a class="btn" href="{% url 'main' %}">
+                    <span class="me-5 fs-1">Logo</span>
+                </a>
                 <div class="d-flex align-items-center w-100">
                     <div>
                         <button class="btn text-white" style="background-color: #225496"><span>Каталог</span></button>
